[package]
name = "ci-cd-demo"
version = "0.1.0"
edition = "2024"
description = "A simple Rust template with CI/CD"
license = "MIT"
authors = ["James Wise <jawise23@users.noreply.github.com>"]
repository = "https://github.com/jawise23/ci-cd-demo"
readme = "README.md"
keywords = ["rust", "ci", "template"]
categories = ["development-tools", "templates"]

[dependencies]
